# RTKLIB

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  RTKLib.pri  RTKLib.pro  convrnx.c  makefile  readme.md  readme.txt
app/: app.pri  app.pro  clean_consapp.bat  clean_winapp.bat  install.sh  install_consapp.bat  install_qtapp.bat  install_winapp.bat  makeall.sh  makefile  rtklib_consapp.groupproj  rtklib_consapp.groupproj.local  rtklib_winapp.groupproj  rtklib_winapp.groupproj.local
data/: P1C1_ALL.DCB  P1P2_ALL.DCB  P2C2.DCB  STA_GSI.txt  STA_IGS.txt  STA_IGS08.txt  STA_IGS_H.txt  STA_IGS_HR.txt  STA_IGS_MGEX.txt  TLE_20130427.txt  TLE_20140827.txt  TLE_20160119.txt  TLE_20190513.txt  TLE_20190819.txt  TLE_20201201txt.txt  TLE_GNSS_SATNO.txt  TLE_GNSS_SIM.txt  URL_LIST.txt  cres_raw_1hz.cmd  elmask_sample.txt  gnssdatasrc.txt  igs05.atx  igs10P1565_wocov.snx  lexr_inittime.cmd  ngs_abs.pcv  oem3_com2setup.cmd  oem3_raw_10hz.cmd  oem3_raw_1hz.cmd  oem3_rtcm2_10hz.cmd  oem3_rtk_10hz.cmd  oem4_raw_10hz.cmd  oem4_raw_1hz.cmd  oem4_rtcm2_1hz.cmd  oem4_rtcm3_1hz.cmd  oem6_raw_1hz.cmd  skytraq_raw_10hz.cmd  skytraq_raw_1hz.cmd  skytraq_raw_20hz.cmd  skytraq_raw_5hz.cmd  stations.pos  (+13 more)
doc/: convbin.1  pos2kml.1  relnote_2.4.2.htm  rnx2rtcm.1  rnx2rtkp.1  rtkrcv.1  str2str.1
lib/: .gitignore  lib.pro
src/: .gitignore  cmr.c  cmr.h  convgpx.c  convkml.c  convrnx.c  cssr.c  cssr.h  datum.c  download.c  ephemeris.c  geoid.c  geoid12a.c  gis.c  ionex.c  lambda.c  options.c  pntpos.c  postpos.c  ppp.c  ppp_ar.c  ppp_corr.c  preceph.c  qzsl6.c  qzslex.c  rcvraw.c  (+16 more)
(+1344 files in other folders)
